// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalListToggleViewBtn /> should render a toggle button with map selected 1`] = `
<div
  aria-label="global.filter.chose.display.type"
  className="btn-group d-flex mb-15"
  id="step-view-toggle"
  role="group"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <Button
    active={false}
    aria-checked={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    disabled={false}
    onClick={[Function]}
    role="checkbox"
    style={
      Object {
        "flex": "1 0 auto",
      }
    }
    title={null}
  >
    <i
      className="cap cap-android-menu"
    />
     
    <FormattedMessage
      id="list-view"
      values={Object {}}
    />
  </Button>
  <Button
    active={false}
    aria-checked={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    disabled={false}
    onClick={[Function]}
    role="checkbox"
    style={
      Object {
        "flex": "1 0 auto",
      }
    }
    title={null}
  >
    <i
      className="cap cap-th-large"
    />
     
    <FormattedMessage
      id="grid"
      values={Object {}}
    />
  </Button>
  <Button
    active={true}
    aria-checked={true}
    block={false}
    bsClass="btn"
    bsStyle="default"
    disabled={false}
    onClick={[Function]}
    role="checkbox"
    style={
      Object {
        "flex": "1 0 auto",
      }
    }
    title="map-selected"
  >
    <i
      className="cap cap-map-location"
    />
     
    <FormattedMessage
      id="proposal.map.map"
      values={Object {}}
    />
  </Button>
</div>
`;

exports[`<ProposalListToggleViewBtn /> should render a toggle button with mosaic selected 1`] = `
<div
  aria-label="global.filter.chose.display.type"
  className="btn-group d-flex mb-15"
  id="step-view-toggle"
  role="group"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <Button
    active={false}
    aria-checked={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    disabled={false}
    onClick={[Function]}
    role="checkbox"
    style={
      Object {
        "flex": "1 0 auto",
      }
    }
    title={null}
  >
    <i
      className="cap cap-android-menu"
    />
     
    <FormattedMessage
      id="list-view"
      values={Object {}}
    />
  </Button>
  <Button
    active={true}
    aria-checked={true}
    block={false}
    bsClass="btn"
    bsStyle="default"
    disabled={false}
    onClick={[Function]}
    role="checkbox"
    style={
      Object {
        "flex": "1 0 auto",
      }
    }
    title="mosaic-selected"
  >
    <i
      className="cap cap-th-large"
    />
     
    <FormattedMessage
      id="grid"
      values={Object {}}
    />
  </Button>
  <Button
    active={false}
    aria-checked={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    disabled={false}
    onClick={[Function]}
    role="checkbox"
    style={
      Object {
        "flex": "1 0 auto",
      }
    }
    title={null}
  >
    <i
      className="cap cap-map-location"
    />
     
    <FormattedMessage
      id="proposal.map.map"
      values={Object {}}
    />
  </Button>
</div>
`;

exports[`<ProposalListToggleViewBtn /> should render a toggle button without map & with table selected 1`] = `
<div
  aria-label="global.filter.chose.display.type"
  className="btn-group d-flex mb-15"
  id="step-view-toggle"
  role="group"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <Button
    active={true}
    aria-checked={true}
    block={false}
    bsClass="btn"
    bsStyle="default"
    disabled={false}
    onClick={[Function]}
    role="checkbox"
    style={
      Object {
        "flex": "1 0 auto",
      }
    }
    title="table-selected"
  >
    <i
      className="cap cap-android-menu"
    />
     
    <FormattedMessage
      id="list-view"
      values={Object {}}
    />
  </Button>
  <Button
    active={false}
    aria-checked={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    disabled={false}
    onClick={[Function]}
    role="checkbox"
    style={
      Object {
        "flex": "1 0 auto",
      }
    }
    title={null}
  >
    <i
      className="cap cap-th-large"
    />
     
    <FormattedMessage
      id="grid"
      values={Object {}}
    />
  </Button>
</div>
`;
